# monkey_island_extractor

./: README.md  pyproject.toml
src/monkey_island_extractor/: __init__.py  __main__.py  main.py  pak_file_extractor.py  xwb_file_extractor.py
